--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,46 @@
-.Rproj.user
-.Rhistory
-.RData
-.Ruserdata
+data/
+*.png
+*.xlsx
+debug.R
+git branch -M main
 *.csv
-*DS_Store
-Data/
+secrets.json
+
+# Template from https://github.com/github/gitignore
+
+# History files
+.Rhistory
+.Rapp.history
+
+# Session Data files
+.RData
+
+# User-specific files
+.Ruserdata
+
+# Example code in package build process
+*-Ex.R
+
+# Output files from R CMD build
+/*.tar.gz
+
+# Output files from R CMD check
+/*.Rcheck/
+
+# RStudio files
+.Rproj.user/
+
+# knitr and R markdown default cache directories
+*_cache/
+/cache/
+
+# Temporary files created by R markdown
+*.utf8.md
+*.knit.md
+
+# R Environment Variables
+.Renviron
+
+# translation temp files
+po/*~
+
